# CorsairAI

./: .gitignore  README.md  testall.sh
apps/amp-sql-gen/: README.md  pyproject.toml
apps/amp-sql-gen/app/: config.py  llm.py  main.py  validator.py
apps/amp-support-bot/: .env.example  README.md  pyproject.toml  run.sh
apps/amp-support-bot/app/: main.py
apps/amp-support-bot/app/chat/: store.py
apps/amp-support-bot/app/core/: config.py  models.py  ollama.py
apps/amp-support-bot/app/kb/: ingest.py  store.py
apps/amp-support-bot/app/utils/: text.py
apps/amp-translator/: README.md  pyproject.toml
apps/amp-translator/app/: config.py  llm.py  main.py
