[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "amp-translator"
version = "0.1.1"
description = "FastAPI translation service using Llama 3 via Ollama (translate-only guarded)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Amplivo CSRnow", email = "support@example.com" }]
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "langdetect>=1.0.9"        # â† added
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8"]

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.setuptools]
packages = ["app"]